cabal-version: 2.2

name:           emulator
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/BF-AVR#readme>
homepage:       https://github.com/t-sasaki915/BF-AVR#readme
bug-reports:    https://github.com/t-sasaki915/BF-AVR/issues
author:         Toma Sasaki
maintainer:     netst915@gmail.com
copyright:      2026 Toma Sasaki
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/t-sasaki915/BF-AVR

library
  exposed-modules:
      Lib
  other-modules:
      Paths_emulator
  autogen-modules:
      Paths_emulator
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings, QuasiQuotes

executable emulator-exe
  main-is: Main.hs
  other-modules:
      Paths_emulator
  autogen-modules:
      Paths_emulator
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      emulator
    , base >=4.7 && <5
  default-language: Haskell2010
  default-extensions: OverloadedStrings, LambdaCase, QuasiQuotes

